--- a/style/buttons.css
+++ b/style/buttons.css
@@ -1,5 +1,4 @@
 .btn {
-
   --btn-bg-color: var(--text-color-primary);
   --btn-color: var(--bg-color);
   border: 0;
@@ -12,7 +11,7 @@
 
   border-radius: 0.5rem;
 
-  font: var(--fw-md) var(--fs-base)/1.5rem var(--ff-sans);
+  font: var(--fw-md) var(--fs-base) / 1.5rem var(--ff-sans);
 
   cursor: pointer;
 
@@ -27,23 +26,26 @@
     var(--brand-color-primary) 100%
   );
   --btn-color: var(--surface-color);
+
+  color: var(--btn-color);
+
+  -webkit-background-clip: initial;
+  background-clip: initial;
 }
 
 .btn-sm {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   font-size: var(--fs-sm);
 }
 
 .btn-md {
-  padding: .75rem 1.5rem;
+  padding: 0.75rem 1.5rem;
   font-size: var(--fs-base);
-
 }
 
 .btn-lg {
   padding: 1rem 2rem;
   font-size: 1.125rem;
-
 }
 
 .btn[aria-label] {
@@ -65,5 +67,17 @@
     color: transparent;
     position: relative;
     z-index: 1;
+  }
+}
+
+@media (width >= 80em) {
+  .btn-sm {
+    padding: 0.75rem 1.5rem;
+    font-size: var(--fs-base);
+  }
+
+  .btn-md {
+    padding: 1rem 2rem;
+    font-size: 1.125rem;
   }
 }
